--- a/melos.yaml
+++ b/melos.yaml
@@ -15,6 +15,7 @@ scripts:
       flutter: true
 
   build_dart:
-    exec: dart run build_runner build --delete-conflicting-outputs
+    exec: fvm dart run build_runner build --delete-conflicting-outputs
     packageFilters:
       flutter: true
+      dirExists: "example"
