--- a/packages/fragmentable_generator/pubspec.yaml
+++ b/packages/fragmentable_generator/pubspec.yaml
@@ -2,35 +2,30 @@ name: fragmentable_generator
 description: >-
   Automatically generate code for converting to and from GraphQL Fragments by annotating
   Dart classes.
-version: 0.0.1
+version: 0.0.4
 publish_to: none
 
 environment:
-  sdk: '>=3.5.0 <4.0.0'
+  sdk: ^3.5.3
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
   
-  path: 1.9.1
+  path: 1.9.0
   build: 2.4.2
   source_gen: 2.0.0
   dart_style: 3.0.1
   analyzer: 6.11.0
   code_builder: 4.10.1
-  collection: 1.19.1
+  collection: 1.19.0
   fragmentable_annotation:
     path: ../fragmentable_annotation
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   flutter_lints: ^5.0.0
   build_test: 2.2.3
   build_runner: 2.4.15
   test: 1.25.15
   source_gen_test: 1.1.1
-  
-
-resolution: workspace
