--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,10 +3,6 @@ name: tractian_fragmentable_workspace
 publish_to: none
 
 environment:
-  sdk: '>=3.5.0 <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 dev_dependencies:
-  melos: ^6.3.2
-
-workspace:
-  - packages/fragmentable_annotation
-  - packages/fragmentable_generator
+  melos: 6.3.2
